# allostatic-handover

./: .dockerignore  .gitignore  ASSET_PROVENANCE.md  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  safety_shield_py.py
allostatic_handover/: __init__.py  registration.py
allostatic_handover/analysis/: plot_summary_svg.py
allostatic_handover/dashboard/: __init__.py  app.py
allostatic_handover/dreamerv3_exact/: __init__.py  agent.py  dataset.py  dependencies.py  mjlab_bridge.py
allostatic_handover/envs/: __init__.py  allostatic_load.py  allostatic_robot_human_handover.py  human_hidden_state.py  mock_handover_env.py  reward_variants.py  speech_events.py
allostatic_handover/experiments/: config_loading.py  diagnose_ppo_expert_alignment.py  (+9 more)
configs/: env_base.yaml  human_states.yaml  reward_allostatic.yaml  reward_speech_penalty.yaml  reward_task_only.yaml  speech_tokens.yaml  wandb.yaml
scripts/: check_dreamerv3_exact_dependencies.py  check_dreamerv3_jax_runtime.py  check_mjlab_task_only_scripted.py  collect_mjlab_world_model_dataset.py  compare_hrgym_mjlab_full_layout.py  copy_hrgym_assets.py  diagnose_mjlab_full_layout.py  evaluate_dreamerv3_mjlab_policy.py  evaluate_mjlab_policy.py  render_mjlab_random_animations.py  run_mjlab_play.py  run_mjlab_three_condition_ppo_sequence.sh  train_dreamer_world_model.py  train_dreamerv3_exact_world_model.py  train_dreamerv3_mjlab_policy.py
tests/: test_allostatic_models.py  test_mjlab_full_handover_assets.py  test_mjlab_handover_terms.py  test_world_model_pipeline.py  test_zz_mjlab_full_visual_check.py
(+26 files in other folders)
